[package]
name = "tsuki-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
cron = { version = "0", optional = true }
async-std = { version = "1", optional = true }
tokio = { version = "1", optional = true }

[features]
tokio = ["dep:tokio", "tokio/sync", "tokio/time", "tokio/rt"]
async-std = ["dep:async-std"]
cron = ["dep:cron"]
