[package]
name = "tsuki-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["4t145<u4t145@163.com>"]
description = "A simple, light wight, composable and extensible scheduler for every runtime."
repository = "https://github.com/4t145/tsuki-scheduler"
license = "Apache-2.0"
keywords = ["cron", "scheduler", "task", "wasm", "time"]


[dependencies]
chrono = { version = "0.4" }
cron = { version = "0", optional = true }
async-std = { version = "1", optional = true }
tokio = { version = "1", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
uuid = { version = "1.8", optional = true }

[features]
default = ["uuid"]
thread = []
uuid = ["dep:uuid", "uuid/v4"]
wasm = ["wasm-bindgen-futures"]
tokio = ["dep:tokio", "tokio/sync", "tokio/rt"]
async-std = ["dep:async-std"]
cron = ["dep:cron"]
wasm-bindgen-futures = ["dep:wasm-bindgen-futures"]

[[example]]
name = "tokio"
required-features = ["tokio", "cron", "tokio/full"]

